--- a/mava/configs/system/sable/rec_sable.yaml
+++ b/mava/configs/system/sable/rec_sable.yaml
@@ -1,4 +1,4 @@
-# --- Defaults Sable ---
+# --- Defaults Memory Sable ---
 
 total_timesteps: ~ # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
