--- a/mava/configs/env/scenario/simple_spread_3ag.yaml
+++ b/mava/configs/env/scenario/simple_spread_3ag.yaml
@@ -1,4 +1,4 @@
-# The config of the 2s-8x8-2p-2f-coop scenario with the VectorObserver set as default.
+# The config of the simple_spread_3ag scenario.
 name: MPE_simple_spread_v3
 task_name: simple_spread_3ag
 
@@ -6,4 +6,3 @@ task_config:
   num_agents: 3
   num_landmarks: 3
   local_ratio: 0.5
-  action_type: "Continuous" # "Continuous" or "Discrete"
