--- a/mava/configs/default/ff_ippo_sebulba.yaml
+++ b/mava/configs/default/ff_ippo_sebulba.yaml
@@ -3,7 +3,7 @@ defaults:
   - arch: sebulba
   - system: ppo/ff_ippo
   - network: mlp  # [mlp, continuous_mlp, cnn]
-  - env: lbf_gym  # [rware_gym, lbf_gym]
+  - env: rware_gym  # [rware_gym, lbf_gym]
   - _self_
 
 hydra:
