feat: timestep encoding for rec sable

--- a/mava/configs/network/ff_retention.yaml
+++ b/mava/configs/network/ff_retention.yaml
@@ -12,6 +12,7 @@ chunkwise:
   chunk_size: 32 # Size of the chunk: calculated over timesteps dim.
 
 ff_config:
+  type: "ff_sable" # Type of the network.
   # --- Positional encoding ---
   agents_positional_encoding: True # Agents positional encoding for Sable non-memory.
   # It is recommended to enable either it or 'add_agent_id', but not both simultaneously to prevent redundancy and conflict.
