feat: set the action head automatically based on env name

--- a/mava/configs/default/ff_isac.yaml
+++ b/mava/configs/default/ff_isac.yaml
@@ -3,7 +3,7 @@ defaults:
   - logger: logger
   - arch: anakin
   - system: sac/ff_isac
-  - network: continuous_mlp  # [continuous_mlp]
+  - network: mlp
   - env: mabrax  # [mabrax]
 
 hydra:
