--- a/mava/configs/system/q_learning/rec_qmix.yaml
+++ b/mava/configs/system/q_learning/rec_qmix.yaml
@@ -6,10 +6,6 @@ seed: 1
 
 # --- Agent observations ---
 add_agent_id: True
-observe_step_count: False
-# This flag toggles whether the agent IDs will be rotational (ie. only two continuous values on the
-# unit circle) if True otherwise agent IDs are one-hot.
-rotational_agent_ids: False
 
 # --- RL hyperparameters ---
 min_buffer_size: 32
@@ -28,7 +24,7 @@ q_lr: 3e-5  # the learning rate of the Q network network optimizer
 max_grad_norm: 10 # value used to clip optimiser - set big for no clipping
 
 # other
-hard_update: False
+hard_update: True
 update_period: 200
 tau: 0.01  # smoothing coefficient for target networks
 gamma: 0.99  # discount factor
