feat: instantiate networks with hydra utils

--- a/mava/configs/default/rec_qmix.yaml
+++ b/mava/configs/default/rec_qmix.yaml
@@ -3,7 +3,7 @@ defaults:
   - logger: logger
   - arch: anakin
   - system: q_learning/rec_qmix
-  - network: rnn
+  - network: qmix_rnn
   - env: smax
 
 hydra:
