--- a/mava/configs/env/smac_gym.yaml
+++ b/mava/configs/env/smac_gym.yaml
@@ -2,10 +2,10 @@
 defaults:
   - _self_
 
-env_name: RobotWarehouse  # Used for logging purposes.
+env_name: Starcraft  # Used for logging purposes.
 scenario:
-  name: rware
-  task_name: rware-tiny-2ag-v2  # [rware-tiny-2ag-v2, rware-tiny-4ag-v2, rware-tiny-4ag-easy-v2, rware-small-4ag-v2]
+  name: smaclite
+  task_name: smaclite/2s3z-v0  # smaclite/ + ['10m_vs_11m-v0', '27m_vs_30m-v0', '3s5z_vs_3s6z-v0', '2s3z-v0', '3s5z-v0', 'MMM-v0', 'MMM2-v0', '2c_vs_64zg-v0', 'bane_vs_bane-v0', 'corridor-v0', '2s_vs_1sc-v0', '3s_vs_5z-v0']
 
 # Defines the metric that will be used to evaluate the performance of the agent.
 # This metric is returned at the end of an experiment and can be used for hyperparameter tuning.
