--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -25,3 +25,4 @@ scipy==1.12.0
 tensorboard_logger
 tensorflow_probability
 type_enforced # needed because gigastep is missing this dependency
+smaclite @ git+https://github.com/uoe-agents/smaclite.git
